Updating to Java 25 and Gradle to 9.2.0